--- a/ajouter-un-script-externe-au-header-sur-magento.html
+++ b/ajouter-un-script-externe-au-header-sur-magento.html
@@ -242,19 +242,19 @@
 
 <p>Par exemple si on devait initialiser un tel block voici ce qu'on ferait :</p>
 
-<script src="https://gist.github.com/4365871.js?file=create_block.php"></script>
+<script src="https://gist.github.com/jacquesbh/4365871.js?file=create_block.php"></script>
 
 
 <p>Vous voyez peut-être déjà où je veux en venir ?</p>
 
 <p>Et si maintenant notre texte était <code>&lt;script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"&gt;&lt;/script&gt;</code> ?</p>
 
-<script src="https://gist.github.com/4365871.js?file=jquery.php"></script>
+<script src="https://gist.github.com/jacquesbh/4365871.js?file=jquery.php"></script>
 
 
 <p>Ok mais dans le layout ça donne quoi ?</p>
 
-<script src="https://gist.github.com/4365871.js?file=core_text.xml"></script>
+<script src="https://gist.github.com/jacquesbh/4365871.js?file=core_text.xml"></script>
 
 
 <p><em>Note : N'oubliez pas le <code>&lt;![CDATA[ ]]&gt;</code> !</em></p>
@@ -285,7 +285,7 @@
 
 <p>Voici à quoi ressemble notre <code>local.xml</code> :</p>
 
-<script src="https://gist.github.com/4365871.js?file=local.xml"></script>
+<script src="https://gist.github.com/jacquesbh/4365871.js?file=local.xml"></script>
 
 
 <p>A partir de maintenant notre jQuery en provenance de Google est directement chargé dans notre <code>head</code>.</p>
@@ -300,7 +300,7 @@
 
 <p>Voici comment ajouter la "constante" <code>BASE_URL</code> dans le <code>head</code> de vos projets, dans votre local.xml :</p>
 
-<script src="https://gist.github.com/4365871.js?file=local_base_url.xml"></script>
+<script src="https://gist.github.com/jacquesbh/4365871.js?file=local_base_url.xml"></script>
 
 
 
@@ -365,7 +365,7 @@
         
         <li>
             <span>Gist associé</span>
-            <strong><a href="https://gist.github.com/4365871">4365871</a></strong>
+            <strong><a href="https://gist.github.com/jacquesbh/4365871">jacquesbh/4365871</a></strong>
         </li>
         
     </ul>
