--- a/creer-un-email-transactionnel-sur-magento.html
+++ b/creer-un-email-transactionnel-sur-magento.html
@@ -293,7 +293,7 @@ L'équipe de {nom de la boutique}
 
 <p>Editons notre fichier <code>/app/code/local/Jbh/Demo/etc/config.xml</code>.</p>
 
-<script src="https://gist.github.com/3132212.js?file=app-code-local-Jbh-Demo-etc-config.xml"></script>
+<script src="https://gist.github.com/jacquesbh/3132212.js?file=app-code-local-Jbh-Demo-etc-config.xml"></script>
 
 
 <p>Une partie <code>template</code> dans <code>global</code> consiste à indiquer à Magento que nous avons un nouvel email transactionnel dans l'application.</p>
@@ -302,7 +302,7 @@ L'équipe de {nom de la boutique}
 
 <p>N'oubliez pas le fichier <code>/app/etc/modules/Jbh_Demo.xml</code> :)</p>
 
-<script src="https://gist.github.com/3132212.js?file=app-etc-modules-Jbh_Demo.xml"></script>
+<script src="https://gist.github.com/jacquesbh/3132212.js?file=app-etc-modules-Jbh_Demo.xml"></script>
 
 
 <h2>Notre fichier email</h2>
@@ -320,7 +320,7 @@ L'équipe de {nom de la boutique}
 
 <p>Je vous laisse le soin de regarder les autres emails pour comprendre l'utilisation des variables. Ici nous feront juste en sorte que nos textes soient protégés.</p>
 
-<script src="https://gist.github.com/3132212.js?file=app-locale-fr_FR-template-email-jbh_demo-happyday.html"></script>
+<script src="https://gist.github.com/jacquesbh/3132212.js?file=app-locale-fr_FR-template-email-jbh_demo-happyday.html"></script>
 
 
 <h2>Notre modèle</h2>
@@ -331,7 +331,7 @@ L'équipe de {nom de la boutique}
 
 <p>On notera la présence de deux constantes. Comme on le fait dans Magento, on utilise des constantes pour indiquer les chemins vers les variables de configuration. Ici nous avons les chemins vers le template et l'expéditeur du mail.</p>
 
-<script src="https://gist.github.com/3132212.js?file=app-code-local-Jbh-Demo-Model-Email.php"></script>
+<script src="https://gist.github.com/jacquesbh/3132212.js?file=app-code-local-Jbh-Demo-Model-Email.php"></script>
 
 
 <h2>Et ensuite ?</h2>
@@ -409,7 +409,7 @@ Rien de bien compliqué en fait !</p>
         
         <li>
             <span>Gist associé</span>
-            <strong><a href="https://gist.github.com/3132212">3132212</a></strong>
+            <strong><a href="https://gist.github.com/jacquesbh/3132212">jacquesbh/3132212</a></strong>
         </li>
         
     </ul>
