--- a/git-en-entreprise.html
+++ b/git-en-entreprise.html
@@ -661,7 +661,7 @@ C'est essentiellement à cause de ces <code>reset</code> que je force le commit 
         
         <li>
             <span>Gist associé</span>
-            <strong><a href="https://gist.github.com/3607757">3607757</a></strong>
+            <strong><a href="https://gist.github.com/jacquesbh/3607757">jacquesbh/3607757</a></strong>
         </li>
         
     </ul>
