--- a/page5/index.html
+++ b/page5/index.html
@@ -1040,14 +1040,14 @@ Jbh_Grid&gt;
 
 <p>Complétons notre setup :</p>
 
-<script src="https://gist.github.com/3344499.js?file=app/code/local/Jbh/Grid/sql/jbh_grid_setup/mysql4-install-0.1.0.php"></script>
+<script src="https://gist.github.com/jacquesbh/3344499.js?file=app/code/local/Jbh/Grid/sql/jbh_grid_setup/mysql4-install-0.1.0.php"></script>
 
 
 <h2>Notre menu admin</h2>
 
 <p>Il nous faut éditer notre fichier <code>etc/adminhtml.xml</code> pour ajouter notre menu et les ACLs :</p>
 
-<script src="https://gist.github.com/3344499.js?file=app/code/local/Jbh/Grid/etc/adminhtml.xml"></script>
+<script src="https://gist.github.com/jacquesbh/3344499.js?file=app/code/local/Jbh/Grid/etc/adminhtml.xml"></script>
 
 
 <h2>Notre contrôleur admin</h2>
@@ -1059,7 +1059,7 @@ Jbh_Grid&gt;
 
 <p>On complète assez rapidement !</p>
 
-<script src="https://gist.github.com/3344499.js?file=app/code/local/Jbh/Grid/controllers/Adminhtml/IndexController.php"></script>
+<script src="https://gist.github.com/jacquesbh/3344499.js?file=app/code/local/Jbh/Grid/controllers/Adminhtml/IndexController.php"></script>
 
 
 <h2>Complétons notre grid</h2>
@@ -1068,12 +1068,12 @@ Jbh_Grid&gt;
 
 <h3>Le container</h3>
 
-<script src="https://gist.github.com/3344499.js?file=app/code/local/Jbh/Grid/Block/Adminhtml/Foo.php"></script>
+<script src="https://gist.github.com/jacquesbh/3344499.js?file=app/code/local/Jbh/Grid/Block/Adminhtml/Foo.php"></script>
 
 
 <h3>Le grid</h3>
 
-<script src="https://gist.github.com/3344499.js?file=app/code/local/Jbh/Grid/Block/Adminhtml/Foo/Grid.php"></script>
+<script src="https://gist.github.com/jacquesbh/3344499.js?file=app/code/local/Jbh/Grid/Block/Adminhtml/Foo/Grid.php"></script>
 
 
 <h2>N'oublions pas les traductions !</h2>
@@ -1108,7 +1108,7 @@ Jbh_Grid&gt;
 
 <p>Et ça donne ça, pour le français par exemple :</p>
 
-<script src="https://gist.github.com/3344499.js?file=app/locales/fr_FR/Jbh_Grid.csv"></script>
+<script src="https://gist.github.com/jacquesbh/3344499.js?file=app/locales/fr_FR/Jbh_Grid.csv"></script>
 
 
 <h2>Conclusion</h2>
@@ -1127,14 +1127,14 @@ Jbh_Grid&gt;
 
 <p>Surtout... le <code>config.xm</code>l... <code>&lt;3 &lt;3 &lt;3</code></p>
 
-<script src="https://gist.github.com/3344499.js?file=app/code/local/Jbh/Grid/etc/config.xml"></script>
+<script src="https://gist.github.com/jacquesbh/3344499.js?file=app/code/local/Jbh/Grid/etc/config.xml"></script>
 
 
 <p>Le bonheur quoi...</p>
 
 <p>Vos avis sont les bienvenus !</p>
 
-<p>Vous pouvez <a href="https://gist.github.com/3344499/download">télécharger ce module</a>.</p>
+<p>Vous pouvez <a href="https://gist.github.com/jacquesbh/3344499/download">télécharger ce module</a>.</p>
 
 <h3>Astuce</h3>
 
