--- a/realisez-vos-propres-scripts-php-sur-magento.html
+++ b/realisez-vos-propres-scripts-php-sur-magento.html
@@ -328,7 +328,7 @@ $
 
 <p>Voilà ce que ça donne :</p>
 
-<script src="https://gist.github.com/3139595.js?file=misc-change_admin_password.php"></script>
+<script src="https://gist.github.com/jacquesbh/3139595.js?file=misc-change_admin_password.php"></script>
 
 
 
@@ -426,7 +426,7 @@ $
         
         <li>
             <span>Gist associé</span>
-            <strong><a href="https://gist.github.com/3139595">3139595</a></strong>
+            <strong><a href="https://gist.github.com/jacquesbh/3139595">jacquesbh/3139595</a></strong>
         </li>
         
     </ul>
