--- a/vos-blocs-en-ajax-via-webservice.html
+++ b/vos-blocs-en-ajax-via-webservice.html
@@ -257,7 +257,7 @@
 
 <p>Nous aurons juste besoin d'un contrôleur (et donc d'une route front) :</p>
 
-<script src="https://gist.github.com/3210926.js?file=config.xml"></script>
+<script src="https://gist.github.com/jacquesbh/3210926.js?file=config.xml"></script>
 
 
 <p>Dans le contrôleur, rien de bien compliqué :</p>
@@ -268,7 +268,7 @@
 </ul>
 
 
-<script src="https://gist.github.com/3210926.js?file=PageController.php"></script>
+<script src="https://gist.github.com/jacquesbh/3210926.js?file=PageController.php"></script>
 
 
 <p>L'idée c'est que c'est à vous d'ajouter vos propres actions par la suite !</p>
@@ -277,7 +277,7 @@
 
 <p>Voici comment appeler notre footer en ajax via jQuery :</p>
 
-<script src="https://gist.github.com/3210926.js?file=demo.js"></script>
+<script src="https://gist.github.com/jacquesbh/3210926.js?file=demo.js"></script>
 
 
 <p>Sachez qu'un simple appel en php tel que :</p>
@@ -297,7 +297,7 @@
 
 <p>Ces scripts sont sous la <a href="http://sam.zoy.org/wtfpl/">WTFPL</a>.</p>
 
-<p>P.S. Le fichier <code>app/etc/modules/Jbh_Webservice.xml</code> est <a href="https://gist.github.com/3210926#file_jbh_webservice.xml">sur github ;)</a></p>
+<p>P.S. Le fichier <code>app/etc/modules/Jbh_Webservice.xml</code> est <a href="https://gist.github.com/jacquesbh/3210926#file_jbh_webservice.xml">sur github ;)</a></p>
 
 <!-- more end -->
 
@@ -359,7 +359,7 @@
         
         <li>
             <span>Gist associé</span>
-            <strong><a href="https://gist.github.com/3210926">3210926</a></strong>
+            <strong><a href="https://gist.github.com/jacquesbh/3210926">jacquesbh/3210926</a></strong>
         </li>
         
     </ul>
