--- a/ajouter-un-handle-personnalise-sur-une-page-sur-magento.html
+++ b/ajouter-un-handle-personnalise-sur-une-page-sur-magento.html
@@ -270,7 +270,7 @@
 
 <p>La méthode <code>loadLayout()</code> décortiquée/complétée/nettoyée et commentée ci-dessous :</p>
 
-<script type="text/javascript">gist(4401568, 'load_layout.php', '18-19,30-31,33-35,37-39,50-53');</script>
+<script type="text/javascript">gist(jacquesbh/4401568, 'load_layout.php', '18-19,30-31,33-35,37-39,50-53');</script>
 
 
 <p>Vous avez compris le fonctionnement ? Les points les plus importants sont surlignés.</p>
@@ -289,7 +289,7 @@
 
 <p>Dans cette méthode on va simplement vérifier que nous sommes bien en train d'afficher notre action et nous allons pouvoir y faire l'ajout de notre nouvel handle :</p>
 
-<script type="text/javascript">gist(4401568, 'observer_handle.php', '12-18');</script>
+<script type="text/javascript">gist(jacquesbh/4401568, 'observer_handle.php', '12-18');</script>
 
 
 <p>L'idée c'est surtout de ne pas utiliser une triple condition à la <code>if ($action == 'action' &amp;&amp; $controller == 'controller' &amp;&amp; $module == 'module')</code> car c'est bien trop lourd. On a la possibilité d'avoir un nom d'action précis, alors on fait un case !</p>
@@ -298,7 +298,7 @@
 
 <p>Rien ne nous empêche de récupérer un objet dans le registre pour y ajouter un peu de dynamisme (c'est l'idée en fait) : <em>exemple avec une "news"</em></p>
 
-<script type="text/javascript">gist(4401568, 'observer_news.php', '15-18');</script>
+<script type="text/javascript">gist(jacquesbh/4401568, 'observer_news.php', '15-18');</script>
 
 
 <p>A vous de jouer !</p>
@@ -307,7 +307,7 @@
 
 <p>Pour vérifier que notre handle est présent, rien de plus simple : on ouvre le fichier <code>index.php</code> et on ajoute à la fin du fichier ces quelques lignes.</p>
 
-<script type="text/javascript">gist(4401568, 'index.php');</script>
+<script type="text/javascript">gist(jacquesbh/4401568, 'index.php');</script>
 
 
 <p>On actualise ! Et pof ! (tout en bas..)</p>
@@ -320,7 +320,7 @@
 
 <p>On peut donc lancer un évènement précis pour chaque page sur notre e-commerce :</p>
 
-<script type="text/javascript">gist(4401568, 'observer_dispatch.php', '13-16');</script>
+<script type="text/javascript">gist(jacquesbh/4401568, 'observer_dispatch.php', '13-16');</script>
 
 
 <p>De cette manière on peut utiliser l'évènement <code>controller_action_layout_load_before_frontname_controller_action</code> pour ajouter notre handle sans crainte !</p>
@@ -393,7 +393,7 @@
         
         <li>
             <span>Gist associé</span>
-            <strong><a href="https://gist.github.com/4401568">4401568</a></strong>
+            <strong><a href="https://gist.github.com/jacquesbh/4401568">jacquesbh/4401568</a></strong>
         </li>
         
     </ul>
