--- a/page6/index.html
+++ b/page6/index.html
@@ -392,7 +392,7 @@
 
 <p>Nous aurons juste besoin d'un contrôleur (et donc d'une route front) :</p>
 
-<script src="https://gist.github.com/3210926.js?file=config.xml"></script>
+<script src="https://gist.github.com/jacquesbh/3210926.js?file=config.xml"></script>
 
 
 <p>Dans le contrôleur, rien de bien compliqué :</p>
@@ -403,7 +403,7 @@
 </ul>
 
 
-<script src="https://gist.github.com/3210926.js?file=PageController.php"></script>
+<script src="https://gist.github.com/jacquesbh/3210926.js?file=PageController.php"></script>
 
 
 <p>L'idée c'est que c'est à vous d'ajouter vos propres actions par la suite !</p>
@@ -412,7 +412,7 @@
 
 <p>Voici comment appeler notre footer en ajax via jQuery :</p>
 
-<script src="https://gist.github.com/3210926.js?file=demo.js"></script>
+<script src="https://gist.github.com/jacquesbh/3210926.js?file=demo.js"></script>
 
 
 <p>Sachez qu'un simple appel en php tel que :</p>
@@ -432,7 +432,7 @@
 
 <p>Ces scripts sont sous la <a href="http://sam.zoy.org/wtfpl/">WTFPL</a>.</p>
 
-<p>P.S. Le fichier <code>app/etc/modules/Jbh_Webservice.xml</code> est <a href="https://gist.github.com/3210926#file_jbh_webservice.xml">sur github ;)</a></p>
+<p>P.S. Le fichier <code>app/etc/modules/Jbh_Webservice.xml</code> est <a href="https://gist.github.com/jacquesbh/3210926#file_jbh_webservice.xml">sur github ;)</a></p>
 
  -->
 
@@ -942,7 +942,7 @@ $
 
 <p>Voilà ce que ça donne :</p>
 
-<script src="https://gist.github.com/3139595.js?file=misc-change_admin_password.php"></script>
+<script src="https://gist.github.com/jacquesbh/3139595.js?file=misc-change_admin_password.php"></script>
 
 
 
@@ -1072,7 +1072,7 @@ L'équipe de {nom de la boutique}
 
 <p>Editons notre fichier <code>/app/code/local/Jbh/Demo/etc/config.xml</code>.</p>
 
-<script src="https://gist.github.com/3132212.js?file=app-code-local-Jbh-Demo-etc-config.xml"></script>
+<script src="https://gist.github.com/jacquesbh/3132212.js?file=app-code-local-Jbh-Demo-etc-config.xml"></script>
 
 
 <p>Une partie <code>template</code> dans <code>global</code> consiste à indiquer à Magento que nous avons un nouvel email transactionnel dans l'application.</p>
@@ -1081,7 +1081,7 @@ L'équipe de {nom de la boutique}
 
 <p>N'oubliez pas le fichier <code>/app/etc/modules/Jbh_Demo.xml</code> :)</p>
 
-<script src="https://gist.github.com/3132212.js?file=app-etc-modules-Jbh_Demo.xml"></script>
+<script src="https://gist.github.com/jacquesbh/3132212.js?file=app-etc-modules-Jbh_Demo.xml"></script>
 
 
 <h2>Notre fichier email</h2>
@@ -1099,7 +1099,7 @@ L'équipe de {nom de la boutique}
 
 <p>Je vous laisse le soin de regarder les autres emails pour comprendre l'utilisation des variables. Ici nous feront juste en sorte que nos textes soient protégés.</p>
 
-<script src="https://gist.github.com/3132212.js?file=app-locale-fr_FR-template-email-jbh_demo-happyday.html"></script>
+<script src="https://gist.github.com/jacquesbh/3132212.js?file=app-locale-fr_FR-template-email-jbh_demo-happyday.html"></script>
 
 
 <h2>Notre modèle</h2>
@@ -1110,7 +1110,7 @@ L'équipe de {nom de la boutique}
 
 <p>On notera la présence de deux constantes. Comme on le fait dans Magento, on utilise des constantes pour indiquer les chemins vers les variables de configuration. Ici nous avons les chemins vers le template et l'expéditeur du mail.</p>
 
-<script src="https://gist.github.com/3132212.js?file=app-code-local-Jbh-Demo-Model-Email.php"></script>
+<script src="https://gist.github.com/jacquesbh/3132212.js?file=app-code-local-Jbh-Demo-Model-Email.php"></script>
 
 
 <h2>Et ensuite ?</h2>
