--- a/page7/index.html
+++ b/page7/index.html
@@ -550,19 +550,19 @@ Non sans déconner... L'intégrateur il veut un balisage précis, et jamais le m
 
 <h2>Pour Vim (avec <a href="http://www.vim.org/scripts/script.php?script_id=2540" title="TextMate-style snippets for Vim ">SnipMate</a>)</h2>
 
-<script src="https://gist.github.com/2987266.js?file=php.snippets"></script>
+<script src="https://gist.github.com/jacquesbh/2987266.js?file=php.snippets"></script>
 
 
 <h2>Pour Netbeans</h2>
 
-<script src="https://gist.github.com/2987266.js?file=netbeans_magento_snippets.xml"></script>
+<script src="https://gist.github.com/jacquesbh/2987266.js?file=netbeans_magento_snippets.xml"></script>
 
 
 <h2>Pour PhpStorm</h2>
 
 <p>Merci à <a href="http://jacques.sh/quelques-snippets-magento.html#comment-598945986">Laurent</a> pour son gist !</p>
 
-<script src="https://gist.github.com/3184638.js?file=PHP.xml"></script>
+<script src="https://gist.github.com/jacquesbh/3184638.js?file=PHP.xml"></script>
 
 
 
