--- a/a-propos.html
+++ b/a-propos.html
@@ -481,7 +481,7 @@ Et mon <a href="https://github.com/jacquesbh/Installer/">Installer</a>, un outil
                 var cookieId = 'monsieurbizPopinDisplayed';
                 if ($.cookie(cookieId) == null) {
                     $.fancybox.open('#popin');
-                    $.cookie(cookieId, 'true');
+                    $.cookie(cookieId, 'true', { expires: 15 });
                 }
             });
          })(jQuery);
