--- a/apprendre-a-utiliser-magento-installer.html
+++ b/apprendre-a-utiliser-magento-installer.html
@@ -756,7 +756,7 @@ Jbh_Grid&gt;
                 var cookieId = 'monsieurbizPopinDisplayed';
                 if ($.cookie(cookieId) == null) {
                     $.fancybox.open('#popin');
-                    $.cookie(cookieId, 'true');
+                    $.cookie(cookieId, 'true', { expires: 15 });
                 }
             });
          })(jQuery);
