--- a/creer-un-email-transactionnel-sur-magento.html
+++ b/creer-un-email-transactionnel-sur-magento.html
@@ -635,7 +635,7 @@ Rien de bien compliqué en fait !</p>
                 var cookieId = 'monsieurbizPopinDisplayed';
                 if ($.cookie(cookieId) == null) {
                     $.fancybox.open('#popin');
-                    $.cookie(cookieId, 'true');
+                    $.cookie(cookieId, 'true', { expires: 15 });
                 }
             });
          })(jQuery);
