--- a/git-en-entreprise.html
+++ b/git-en-entreprise.html
@@ -887,7 +887,7 @@ C'est essentiellement à cause de ces <code>reset</code> que je force le commit 
                 var cookieId = 'monsieurbizPopinDisplayed';
                 if ($.cookie(cookieId) == null) {
                     $.fancybox.open('#popin');
-                    $.cookie(cookieId, 'true');
+                    $.cookie(cookieId, 'true', { expires: 15 });
                 }
             });
          })(jQuery);
