--- a/le-layout-sur-magento.html
+++ b/le-layout-sur-magento.html
@@ -904,7 +904,7 @@ Comme nous voulons changer le template global, le block est <code>root</code>.</
                 var cookieId = 'monsieurbizPopinDisplayed';
                 if ($.cookie(cookieId) == null) {
                     $.fancybox.open('#popin');
-                    $.cookie(cookieId, 'true');
+                    $.cookie(cookieId, 'true', { expires: 15 });
                 }
             });
          })(jQuery);
