--- a/le-piege-des-routes-sur-magento.html
+++ b/le-piege-des-routes-sur-magento.html
@@ -727,7 +727,7 @@ http://example.com/blog/adminhtml_manage/index =&gt; « admin »
                 var cookieId = 'monsieurbizPopinDisplayed';
                 if ($.cookie(cookieId) == null) {
                     $.fancybox.open('#popin');
-                    $.cookie(cookieId, 'true');
+                    $.cookie(cookieId, 'true', { expires: 15 });
                 }
             });
          })(jQuery);
