--- a/un-push-pour-vos-produits-sur-magento.html
+++ b/un-push-pour-vos-produits-sur-magento.html
@@ -667,7 +667,7 @@
                 var cookieId = 'monsieurbizPopinDisplayed';
                 if ($.cookie(cookieId) == null) {
                     $.fancybox.open('#popin');
-                    $.cookie(cookieId, 'true');
+                    $.cookie(cookieId, 'true', { expires: 15 });
                 }
             });
          })(jQuery);
