--- a/connectez-vous-sur-un-compte-client-sur-magento.html
+++ b/connectez-vous-sur-un-compte-client-sur-magento.html
@@ -623,7 +623,7 @@ On ne va pas se prendre la tête très longtemps sur l'évènement à attraper. 
                 var cookieId = 'monsieurbizPopinDisplayed';
                 if ($.cookie(cookieId) == null) {
                     $.fancybox.open('#popin');
-                    $.cookie(cookieId, 'true');
+                    $.cookie(cookieId, 'true', { expires: 15 });
                 }
             });
          })(jQuery);
