--- a/references/auto-ecole-tallet.html
+++ b/references/auto-ecole-tallet.html
@@ -524,7 +524,7 @@ var techno = function (nb)
                 var cookieId = 'monsieurbizPopinDisplayed';
                 if ($.cookie(cookieId) == null) {
                     $.fancybox.open('#popin');
-                    $.cookie(cookieId, 'true');
+                    $.cookie(cookieId, 'true', { expires: 15 });
                 }
             });
          })(jQuery);
