--- a/un-debut-a-tout.html
+++ b/un-debut-a-tout.html
@@ -563,7 +563,7 @@ N'hésitez pas à me contacter !</p>
                 var cookieId = 'monsieurbizPopinDisplayed';
                 if ($.cookie(cookieId) == null) {
                     $.fancybox.open('#popin');
-                    $.cookie(cookieId, 'true');
+                    $.cookie(cookieId, 'true', { expires: 15 });
                 }
             });
          })(jQuery);
