--- a/utiliser-un-proxy-sur-android.html
+++ b/utiliser-un-proxy-sur-android.html
@@ -622,7 +622,7 @@ Success
                 var cookieId = 'monsieurbizPopinDisplayed';
                 if ($.cookie(cookieId) == null) {
                     $.fancybox.open('#popin');
-                    $.cookie(cookieId, 'true');
+                    $.cookie(cookieId, 'true', { expires: 15 });
                 }
             });
          })(jQuery);
