I'm too foo for this bar

--- a/a-propos.html
+++ b/a-propos.html
@@ -218,7 +218,7 @@
 <div id="sideWrap">
 
     <div class="me">
-        <img src="/images/me.jpg" alt="" width="277" height="346" />
+        <img src="/images/me-bis.png" alt="" width="277" />
     </div>
 
 </div>
